Drupal 7.103, 2024-12-04
------------------------
- So Long, and Thanks for All the Fish

Drupal 7.102, 2024-11-20
------------------------
- Fixed security issues:
   - SA-CORE-2024-005
   - SA-CORE-2024-008

Drupal 7.101, 2024-06-05
------------------------
- Various security improvements
- Various bug fixes, optimizations and improvements

Drupal 7.100, 2024-03-06
------------------------
- Security improvements
- Announcements module added

Drupal 7.99, 2023-12-06
-----------------------
- Various security improvements
- Various bug fixes, optimizations and improvements

Drupal 7.98, 2023-06-07
-----------------------
- Various security improvements
- Various bug fixes, optimizations and improvements

Drupal 7.97, 2023-04-21
-----------------------
- Fix PHP 5.x regression caused by SA-CORE-2023-005

Drupal 7.96, 2023-04-19
-----------------------
- Fixed security issues:
   - SA-CORE-2023-005

Drupal 7.95, 2023-03-15
-----------------------
- Fixed security issues:
   - SA-CORE-2023-004

Drupal 7.94, 2022-12-14
-----------------------
- Hotfix for book.module and Select query properties

Drupal 7.93, 2022-12-07
-----------------------
- Improved support for PHP 8.2
- Minimum PHP version changed to PHP 5.3
- Various security hardenings
- Various bug fixes, optimizations and improvements

Drupal 7.92, 2022-09-07
-----------------------
- Improved support for PHP 8.1
- Various security hardenings
- Various bug fixes, optimizations and improvements

Drupal 7.91, 2022-07-20
-----------------------
- Fixed security issues:
   - SA-CORE-2022-012

Drupal 7.90, 2022-06-01
-----------------------
- Improved support for PHP 8.1
- Improved support for PostgreSQL
- Various bug fixes, optimizations and improvements

Drupal 7.89, 2022-03-02
-----------------------
- Bug fixes for PHP 8.1
- Fix tests for PostgreSQL

Drupal 7.88, 2022-02-15
-----------------------
- Fixed security issues:
   - SA-CORE-2022-003

Drupal 7.87, 2022-01-19
-----------------------